--- a/goTripcyContent/resources/css/Dashboard.css
+++ b/goTripcyContent/resources/css/Dashboard.css
@@ -6,6 +6,12 @@
 	width: 80%;
 }
 
+.searchContentDiv {
+	padding-left: 11%;
+	padding-top: 8%;
+	height: 112px;
+}
+
 .searchBox {
 	border-radius: 5px;
     border: 1px solid #A9A9A9;
@@ -31,6 +37,36 @@
     color: #000 !important;
 }
 
+.searchBoxContent {
+	border-radius: 5px;
+    border: 1px solid #A9A9A9;
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    outline: none;
+    position: absolute;
+    padding-left: 10px;
+    color: #000 !important;
+    margin-top: 51px;
+    background: #fff;
+}
+.goingToContent, .wantToGoContent, .monthContent {
+	border-radius: 5px;
+    border: 1px solid #A9A9A9;
+    width: 100%;
+    max-height: 200px;
+    font-size: 18px;
+    height: 200px;
+    outline: none;
+    position: absolute;
+    padding-left: 10px;
+    color: #000 !important;
+    margin-top: 51px;
+    background: #fff;
+    z-index: 1;
+    display: none;
+}
+
 .searchBox-active {
 	padding-top: 10px;
 }
@@ -45,16 +81,16 @@
 .searchPaceholder {
 	z-index: 2;
 	position: absolute;
-	left: 20%;
-	font-size: 18px;
+	left: 14%;
+	font-size: 17px;
 	top: 15px;
 }
 
 .searchPaceholder-active {
 	z-index: 2;
 	position: absolute;
-	left: 20%;
-	font-size: 10px;
+	left: 16%;
+	font-size: 12px;
 	top: 0px;
 	font-weight: bold;
 }
@@ -78,4 +114,63 @@
 	height: 48px;
 	width: 50px;
 	background-color: #0162AA !important;
+}
+
+.sectionTrending {
+  padding-top: 80px;
+  padding-bottom: 70px;
+}
+
+.orContainer {
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    padding-top: 9%;
+}
+
+.orTxt {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    margin: auto;
+    text-align: center;
+    background: #aeaeae;
+    color: #666;
+    font: bold 16px/30px 'LatoWebLight', Arial, Helvetica, sans-serif;
+    display: inline-block;
+}
+
+.searchByDestContainer {
+	margin: 0 4px;
+    position: relative;
+    width: 380px;
+    height: 34px;
+    background: #2a2a2a;
+    border-radius: 5px;
+    border: 1px solid #1d1d1d;
+    margin-left: 36%;
+    margin-top: 5%;
+}
+
+.searchByDest {
+	color: #ffffff;
+	text-align: center;
+    text-decoration: none;
+    font: normal 19px/30px 'LatoWebLight', Arial, Helvetica, sans-serif!Important;
+}
+
+.expandCollapsImg {
+	position: absolute;
+    right: 0;
+    top: 17px;
+}
+
+.backgroundOpacity {
+	background-image: url("../images/Background_img.png") !important;
+    width: 90%;
+    height: 11%;
+    opacity: 0.5;
+    position: absolute;
+    margin-left: 6%;
+    margin-top: 3%;
 }
