--- a/goTripcyContent/resources/css/style.css
+++ b/goTripcyContent/resources/css/style.css
@@ -1465,6 +1465,7 @@ article {
 .box-title {
   margin-bottom: 0;
   line-height: 1em;
+  width: 70%;
 }
 .box-title small {
   font-size: 10px;
@@ -1472,6 +1473,9 @@ article {
   text-transform: uppercase;
   display: block;
   margin-top: 4px;
+  margin-bottom: 7px;
+  max-height: 20px !important; 
+  min-height: 20px !important;
   /*letter-spacing: normal;*/
 }
 .box-title small [class^="soap-icon"] {
@@ -1798,7 +1802,7 @@ button.btn-medium, input[type="button"].button.btn-medium, a.button.btn-medium {
 }
 button.btn-small, input[type="button"].button.btn-small, a.button.btn-small {
   height: 28px;
-  padding: 0 24px;
+  padding: 0 29px;
   line-height: 28px;
   font-size: 0.9167em;
 }
@@ -4169,6 +4173,8 @@ ul.check-circle li:before {
 .image-box.style3 .details .description {
   border-top: 1px solid #f5f5f5;
   padding-top: 10px;
+  min-height: 80px !important;
+  max-height: 80px !important;
 }
 .image-box.style4 .details .box-title {
   float: left;
