--- a/goTripcyContent/resources/css/Dashboard.css
+++ b/goTripcyContent/resources/css/Dashboard.css
@@ -2,6 +2,10 @@
 	display: none !important;
 }
 
+.display_None {
+	display: none;
+}
+
 .width50 {
 	width: 50%;
 }
@@ -165,11 +169,32 @@
     margin-top: 5%;
 }
 
+.searchByDestPanelContainer {
+	margin: 0 4px;
+    position: relative;
+    width: 380px;
+    height: 200px;
+    background: #2a2a2a;
+    border-radius: 5px;
+    border: 1px solid #1d1d1d;
+    margin-left: 36%;
+    position: absolute;
+    opacity: 0.8;
+}
+
 .searchByDest {
 	color: #ffffff;
 	text-align: center;
     text-decoration: none;
     font: normal 19px/30px 'LatoWebLight', Arial, Helvetica, sans-serif!Important;
+}
+
+.searchByDestPanel {
+	color: #ffffff;
+	text-align: center;
+    text-decoration: none;
+    font: normal 19px/30px 'LatoWebLight', Arial, Helvetica, sans-serif!Important;
+    height: 200px;
 }
 
 .expandCollapsImg {
@@ -201,14 +226,88 @@
 }
 
 .searchByDestIcon {
-	background-image: url("../images/icon/search_icon.png") !important;
-	background-position: 10px;
-	background-repeat: no-repeat;
-	border-radius: 5px;
-	height: 32px;
+    height: 20px;
+    width: 20px;
+}
+
+.searchByDestArrow {
+	margin-left: 15px;
+	height: 20px;
+    width: 20px;
 }
 
 .pak_img {
 	width: 270px !important;
 	height: 160px !important;
+}
+
+.demoDestSpan {
+    text-align: left;
+    font-style: italic;
+}
+
+.pkgLabel {
+	font-size: 14px;
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.queryContent {
+	position: fixed;
+    float: right;
+    right: 0;
+    z-index: 9999999;
+    text-align: right;
+    border-radius: 10px;
+}
+
+.helpIcon{
+	height: 50%;
+	width: 50%;
+	cursor: pointer;
+}
+
+.quoteContentShow {
+	width: 25%;
+	margin-right: -21px;
+}
+
+.quoteContentDiv {
+	background-color: #0162AA;
+	color: #FFFFFF;
+	font-size: 14px;
+	line-height: 2;
+	opacity: 0.8;
+	height: 190px;
+	width: 203px;
+    border-radius: 25px;
+}
+
+.quoteContentDiv input {
+	color: black;
+	margin-bottom: 10px;
+}
+
+.quoteContentDiv span {
+	margin-right: 0px;
+	font-size: 21px;
+    margin-bottom: 10px;
+}
+
+.quoteContentDiv button {
+    width: 100%;
+}
+
+.quoteContentDiv #userName {
+    background-image: url("../images/icon/user_name.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: 140px;
+}
+
+.quoteContentDiv #userNumber {
+    background-image: url("../images/icon/user_phone.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: 140px;
 }
